# BayesianGroupTesting

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: BBPA_benchmark.cpp  BBPA_benchmark_intra.cpp  experiment_selection_benchmark.cpp  model_manipulation_benchmark.cpp  selector_roofline_benchmark.cpp
cmake/: BGTConfig.cmake.in
docs/: CPU_SELECTOR_BENCHMARKS.md  CUDA_PROVIDER_DESIGN.md  GPU_TEST_PLAN.md  SELECTOR_ALGORITHMS.md
examples/: run_BBPA_benchmark.cpp  run_BBPA_benchmark_intra.cpp  run_model_manipulation_benchmark.cpp  run_simulation.cpp
include/bgt/: bgt.hpp  compile_options.hpp  config.hpp.in  lattice.hpp  logging.hpp  runtime.hpp  simulation.hpp  status.hpp  types.hpp
include/bgt/detail/: common.hpp  cuda_checks.hpp  cuda_provider.hpp  internal_types.hpp  logging_macros.hpp  mpi_checks.hpp  performance.hpp  simd.hpp  state_encoding.hpp
include/bgt/detail/model/: dilution.hpp  lattice.hpp  posterior_buffer.hpp  shrink.hpp
include/bgt/detail/runtime/: progress.hpp  simulation_helpers.hpp
include/bgt/detail/tree/: tree.hpp  tree_stat.hpp
python/bayesian_group_testing/: __init__.py
src/bindings/python/: bgt_module.cpp
src/core/: lattice_api.cpp
src/core/model/: dilution.cpp  distributed_lattice.cpp  lattice_base.cpp  lattice_factory.cpp  posterior_buffer.cpp  replicated_lattice.cpp  shrink_plan.cpp
src/core/tree/: distributed_tree.cpp  fusion_tree.cpp  global_partial_tree.cpp  global_tree.cpp  global_tree_intra.cpp  tree.cpp
src/core/util/: tree_stat.cpp  tree_symm.cpp  tree_trim.cpp
src/kernels/cpu/: bbpa.cpp  bbpa_simd.cpp
src/kernels/cuda/: cuda_provider.cu
src/runtime/: jit_compiler.cpp  kernel_registry.cpp  logging.cpp  parallel_simulation.cpp  performance.cpp  progress.cpp  providers.cpp  reporting.cpp  simulation_helpers.cpp  simulation_runner.cpp  status.cpp
tests/cpp/integration/: cuda_tree_parity_test.cpp  local_simulation_test.cpp  parallel_shrink_property_test.cpp  parallel_tree_modes_test.cpp  runtime_jit_test.cpp  simulation_progress_test.cpp
tests/cpp/regression/: binary_tree_regression_test.cpp  no_shrink_tree_reference_test.cpp  shrink_projection_regression_test.cpp  shrink_property_regression_test.cpp
tests/cpp/support/: assertions.hpp
tests/cpp/unit/: compile_options_test.cpp  diagnostics_scan_test.cpp  dilution_test.cpp  lattice_api_test.cpp  model_math_test.cpp  shrink_plan_test.cpp  status_logging_test.cpp
tests/python/e2e/: test_package_import.py
tests/python/integration/: test_runtime.py
tests/python/regression/: test_binary_tree_regression.py
tests/python/unit/: test_public_api.py
